*Empty MediaWiki Message*

--- a/Mudulood.mw
+++ b/Mudulood.mw
@@ -9,7 +9,7 @@ Sido kalana waa qabiilka ugu badan Beesha hawiye Mudullood waxa lugu xushmeeyaa 
 Mudulood Degaan ahaan waxey degaan laga soo bilaabo xeebta magaalada [[Xarardheere]] ee gobolka [[Mudug]] Ilaa iyo turdho oo ka tirsan jubba hoose hiiraan JAWIIL, MOGADISHO KINGDOM (YAQUUB)
 waxaa xukumijiray nin la'oaran jiray YAQUUB oo ahaa mudulood 900-1870. 16 sano ayuu xukumayay mogdisho,kadib markii uu jabiyay ajuuran kingdom. taleex,dowladi darwiish, 1910 waxaa heestay talada sare, khaalig iyo khusuuigi ugu weeyna ee waqooyiga xaga diinta wuxuu ahaa nin mudulood Xaaji AxmedFIQI 1905 1910- 1915,gabygi kubaxay wuxuu ahaa, waxa sidatan iigalay waa sedigeey rumee sawaab kaga'mahelin sadaqdii AxmedFiqi
 Beelweynta MUDULOOD waa beesha Kowaad ee ugu tiro badan beelaha Hawiye,waxaa aad loogu qadariyaa Magaalada caasimada ee [[Muqadisho]] iyo Hareeraheeda oo ah Degaanka ay Taariikh ahaan Degaan.
-Madaxweynihii ugu horeeyay [[Aadan Cabdulle Cusmaan]] ee Jamhuuriyada [[Soomaliya]] Xusen Kulmiye Afrax Madaxweyne Ku xegeen Waxay Ka Soo jeedaan  Beelweynta Mudulood.Sidoo kale waxaa ka dhashay beesha Mudulood Madaxweyneyaasha kala ah [[Ali Mahdi Mohammed]] iyo [Sharif Sheikh Ahmed] iyo [Xasan Sheekh Maxamuud].Waxaa sidoo kale ka dhashay Beelweynte MUDULOOD labo raysulwasaar oo kala ah [[Ali Mohammed Ghedi]] iyo [[Nur Hassan Hussein]].(waxaa kalo ka dhashay madaxweeyne xasan shikkh maxamuud 2012,kadib markii uu ka guuleeysay ex madaxweyne Shariif.cabdullah Nuur
+Madaxweynihii ugu horeeyay [[Aadan Cabdulle Cusmaan]] ee Jamhuuriyada [[Soomaliya]] Xusen Kulmiye Afrax Madaxweyne Ku xegeen Waxay Ka Soo jeedaan  Beelweynta Mudulood.Sidoo kale waxaa ka dhashay beesha Mudulood Madaxweyneyaasha kala ah [[Ali Mahdi Mohammed]] iyo [Sharif Sheikh Ahmed] iyo [Xasan Sheekh Maxamuud] iyo [maxamed cabdullahi farmaajo].Waxaa sidoo kale ka dhashay Beelweynte MUDULOOD labo raysulwasaar oo kala ah [[Ali Mohammed Ghedi]] iyo [[Nur Hassan Hussein]].(waxaa kalo ka dhashay madaxweeyne xasan shikkh maxamuud 2012,kadib markii uu ka guuleeysay ex madaxweyne Shariif.cabdullah Nuur
 
 == Taariikh ==
 Odiweyn mudulood ama maxamed mudulood Halgamayada ka dhashay waxaa ka mid ah hogaamiyihii ciidamada dhariiqada saalaxii shiikh axmed siyaad. kadib dilkiisii ingiriiska xilka waxaa lawareegay shiikh xasan barsane oo asna ladili ugudanbeytii beelahoodana Waa Hilibi Dalandole iyo Maxammed Mudulood.
