*Empty MediaWiki Message*

--- a/Mahdi_Maxamed_Guuleed.mw
+++ b/Mahdi_Maxamed_Guuleed.mw
@@ -2,7 +2,7 @@
 {{Infobox officeholder
 | honorific-prefix    = Mudane
 | name                = Mahdi Maxamed Guuleed "Khadar"<br/>{{small|"مهدي محمد جوليد "خضر}}
-| image               = File:Mahdi gulaid.jpg
+| image               = Prime minister mahdi gulaidh khadar.jpg
 | alt                 = 
 | caption             = Mahdi 2020
 | office              = Ku-simaha [[Ra'iisul wasaarayaashii Soomaaliya|Ra'iisul wasaaraha Soomaaliya]]<ref>{{cite web|url=https://africa.cgtn.com/2020/07/25/somali-president-appoints-caretaker-prime-minister-after-ali-khaires-ouster/|title=Somali President appoints caretaker Prime Minister after Ali Khaire’s ouster|agency=CGTN|accessdate=July 25, 2020}}</ref>
