--- a/Dawladda_federaalka_Soomaaliya.mw
+++ b/Dawladda_federaalka_Soomaaliya.mw
@@ -67,7 +67,7 @@ Maxkamadda Sare oo ku taal [[Muqdisho]] Gudoomiyaheedana waxaa soo doordta Madax
 
 
 == Warbaahin ==
-[[File:Mahdi Mohammed Gulaid - 2020.jpg|thumb|ra'iisul wasaaraha Soomaaliya, Gulaid]]
+[[File:Prime minister mahdi gulaidh khadar.jpg|thumb|ra'iisul wasaaraha Soomaaliya, Gulaid]]
 [[Soomaaliya]] Waxay leedahay laba xarun ee warfaafineed ee ku hadla Afka Dawladda [[Radio Muqdisho]] ito [[Telefishinka Qaranka Soomaaliyeed]], waxaa kaloo jira Saxaafad madax badaan oo badankood ku hadla Afka Beelahood.
 
 == Ciidamada ==
