*Empty MediaWiki Message*

--- a/Isaaq.mw
+++ b/Isaaq.mw
@@ -45,7 +45,7 @@ Isaaqu waa Beesha Soomaaliyeed oo ugu weyn. Qabiilkani wuxuu dagaa [[Somaliland]
 [[File:President Silanyo of Somaliland (6926075809).jpg|thumb|Axmed Silanyo]]
 * '''Madaxweynaha jsl Axmed Maxamed Siilaanyo'''
 
-[[File:Prime minister mahdi gulaidh khadar.jpg|thumb|MO FARAH]]
+[[File:Prime minister mahdi gulaidh khadar.jpg|thumb|mahdi gulaid]]
 
 ==Sidoo kale fiiri==
 * [[Dir]]
