Removed redirect to [[Isaaq]]

--- a/Garxajis.mw
+++ b/Garxajis.mw
@@ -1,1 +1,4 @@
-#REDIRECT [[Isaaq]]
+[[File:Prime minister mahdi gulaidh khadar.jpg|thumb|mahdi gulaid]]
+Habar yoonis waa beelaha ka mid ah beelaha Isaaq.
+
+[[category:qabiil]]
