*Empty MediaWiki Message*

--- a/Liska_Dagaalka_Aasiya.mw
+++ b/Liska_Dagaalka_Aasiya.mw
@@ -8,6 +8,7 @@ Liska Dagaalka [[Aasiya]] :
 * [[Dagaalki Russka-Jabaan]]
 * [[Yom Kippur War]]
 * [[Isukeenid Goa]]
+* [[Dagaalki Russka iyo Waddanka Afganistan]]
 * [[Dagaalkii Soofiyeeti ee ka dhacay Afghanistan]]
 * [[Dagaalki Bakistaan iyo Hindika 1947]]
 * [[Dagaalki Bakistaan iyo Hindika 1965]]
