--- a/Cabdulmajid_Xuseen.mw
+++ b/Cabdulmajid_Xuseen.mw
@@ -7,7 +7,8 @@ Alle ha u naxariistee '''Cabdul-Majiid Xuseen'''oo ahaa qunsulka Dawlada itoobiy
 <br />
 
 == Taariikhdiisa ==
-Wuxuu ku dashay magaaladda Dirre Dhabe ee wadanka Itoobiya. Beel iyo dalasho iyo dhiig ahaan waa [[Makaahiil|Makahiil]] [[Gadabuursi]], Bahabar Cabdale oo Reer Caraale ah,  lakiin aabihii ayaa dhiig galay oo laga bixin waayay markaas ayay qolo jibriir abokor habar awal ah oo iidoora ayaa magan galyo siisay dhiigiina ka bixisay isku wada geeyoo markii uu madaxqaynaha kililka noqday iyo markii uu dhimanaayayba waala waydiiyay oo lagu yidhi qoloma ayaad tahy wuxuu ku jawaabay anuu qabiilna waanka dhashay qabiilna waan la dhaqmay. Qarabiisa waxay ku noolyihiin Gebilay, Dirre Dhabe iyo Jigjiga.
+Wuxuu ku dashay magaaladda Dirre Dhabe ee wadanka Itoobiya. Beel iyo dalasho iyo dhiig ahaan waa  Cabdale muuse subeer awal / habar awal qaraabadiisu
+ waxay ku noolyihiin Gebilay,abaarso, Dirre Dhabe iyo Jigjiga.
 
 
 Cabdul-Majiid Xuseen waxa uu ahaa siyaasi saamayn weyn ku lahaa siyaasadda dalka Itoobiya iyo guud ahaan bariga Africa isla markaana Dawladda Itoobiya wax uu ka soo qabtay xilal kala duwan, kuwaas oo ay ka mid ahaayeen Wasiirka Dhaqaalaha iyo Xdhiidhka caalamiga ah sidoo kale waxa uu mar ahaa Wasiirka Wasaaradda Gaadiidka cirka iyo dhulka ee Dawladda Itoobiya isaga oo markii u danbaysayna ahaa Qunsulka Dawaladda Itoobiya u fadhiya Qaramada midoobay, waxaana aaskiisii ka qayb galay madax sare oo Dawladda Itoobiya ka tirisan sida Wasiirka Arimaha Debedda iyo Madaxweynaha ismaamulka soomaalida Itoobiya.
