Replacing CAF.svg with [[File:Confederation_of_African_Football_member_associations_map.svg]] (by [[:c:User:CommonsDelinker|CommonsDelinker]] because: file renamed or replaced on Commons).

--- a/Waddanka_Masar_kubada.mw
+++ b/Waddanka_Masar_kubada.mw
@@ -1,11 +1,10 @@
-
 {{Infobox organization
 | name          = Waddanka Masar kubada
 | image         = 
 | size          = 
 | abbreviation  = 
 | formation     = {{Start date and years ago|df=y|1957|02|10}}
-| map           = CAF.svg
+| map           = Confederation of African Football member associations map.svg
 | type          = Sports organization
 | headquarters  = [[6th of October  (city)|6th of October City]], [[Cairo]], Egypt
 | region served = Africa
