--- a/Qooleey.mw
+++ b/Qooleey.mw
@@ -1,6 +1,6 @@
 [[File:Postduif.jpg|thumb|Qooleey]]
 
-'''Qooleey''' ({{lang-en|pegion}}; {{lang-ar|حمام زاجل}}) (magaca [[Saynis]]: ''"Columba livia domestica"'') waa waa nooc ka mid ah shimbiraha dadku dhaqdaan. Qooleeydu waa [[shimbir]] caqli badan kaas oo yaqaan meesha uu u yaal gurigeesa.<ref>{{cite book| last =Blechman | first =Andrew | title =Pigeons-The fascinating saga of the world's most revered and reviled bird. | publisher =University of Queensland Press | year =2007 | location =St Lucia, Queensland | url =http://andrewblechman.com/learn_more.html | isbn =978-0-7022-3641-9 }}</ref>Qooleey dadka qaarkiis waxey u isticmaali jireen Isgaarsiin ahaan waxeyna qaadi jirtay waraaqadaha la isku diro.
+'''Qooleey''' ({{lang-en|pigeon}}; {{lang-ar|حمام زاجل}}) (magaca [[Saynis]]: ''"Columba livia domestica"'') waa waa nooc ka mid ah shimbiraha dadku dhaqdaan. Qooleeydu waa [[shimbir]] caqli badan kaas oo yaqaan meesha uu u yaal gurigeesa.<ref>{{cite book| last =Blechman | first =Andrew | title =Pigeons-The fascinating saga of the world's most revered and reviled bird. | publisher =University of Queensland Press | year =2007 | location =St Lucia, Queensland | url =http://andrewblechman.com/learn_more.html | isbn =978-0-7022-3641-9 }}</ref>Qooleey dadka qaarkiis waxey u isticmaali jireen Isgaarsiin ahaan waxeyna qaadi jirtay waraaqadaha la isku diro.
 Qooleeyda waxee ka soo duuli kartaa, meel u jirto 1300km gurigeeda. ayada oo gurigeeda kusoo noqon karto saacada gudahood. Xowliga ee Qooleeyda ku haadi karto waxa ey u dhaxeesaa 80 ilaa 120km saacadii..
 dadka qaar Qooleeyda weey cunaan.
 
