--- a/Af_Urur.mw
+++ b/Af_Urur.mw
@@ -1,5 +1,64 @@
-
-'''Afurur''' Waa tuulo ku taalo [[Buuraha Golis]] waa deegaan aad u balaaran oo leh wax soosaar kala duwan, Tuulada Afurur waxaa ku nool dad aan tiro ahaan yareen, Waxaa ku yaala Saldhig weyn oo ciidamada Difaaca [[Puntland]] Leeyihiin. Waana goob Muhiim u ah difaaca guud ahaan woqooyi bari & Woqooyi galbeed ee [[Soomaaliya]]. Deegaanka iyo nawaaxigiisaba waxaa Degan Beesha [[Tiinle]].<ref>https://www.bbc.com/somali/war-44906751.amp</ref>
+{{Infobox settlement
+| official_name          = Af Urur
+| other_name             = 
+| native_name            = 
+| nickname               = 
+| settlement_type        = [[Magaalo]]
+| motto                  = 
+| image_skyline          = [[file:Af_urur_overviee.jpg|thumb|Sawir Af Urur]]
+| imagesize              = 
+| image_caption          = 
+| image_flag             = 
+| flag_size              = 
+| image_seal             = 
+| seal_size              = 
+| image_map              = 
+| mapsize                = 
+| map_caption            = 
+| pushpin_map            = Somalia
+| pushpin_relief         = 
+| pushpin_label_position = 
+| pushpin_mapsize        = 
+| pushpin_map_caption    =
+| coordinates            = 
+| subdivision_type       = 
+| subdivision_name       = {{flag|Somalia}}
+| subdivision_type1      = [[Gobol]]
+| subdivision_name1      = Bari
+| subdivision_type2      = [[Magaalo]]
+| subdivision_name2      = [[Boosaaso]]
+| government_footnotes   = 
+| government_type        = 
+| leader_title           = 
+| leader_name            = 
+| established_title      = 
+| established_date       = 1918
+| area_magnitude         = 
+| unit_pref              = Metric
+| elevation_footnotes    = 
+| elevation_m            = 
+| elevation_ft           = 
+| area_footnotes         = 
+| area_total_km2         = 
+| area_land_km2          = 
+| population_as_of       = 
+| population_footnotes   = 
+| population_note        = 
+| population_total       = 
+| population_density_km2 = auto
+| timezone               = [[East Africa Time|EAT]]
+| utc_offset             = 
+| timezone_DST           = 
+| utc_offset_DST         = 
+| postal_code_type       = 
+| postal_code            = 
+| area_code              = 
+| blank_name             = 
+| blank_info             = 
+| website                = 
+| footnotes              = 
+}}
+'''Af Urur''' Waa tuulo ku taalo [[Buuraha Golis]] waa deegaan aad u balaaran oo leh wax soosaar kala duwan, Tuulada Afurur waxaa ku nool dad aan tiro ahaan yareen, Waxaa ku yaala Saldhig weyn oo ciidamada Difaaca [[Puntland]] Leeyihiin. Waana goob Muhiim u ah difaaca guud ahaan woqooyi bari & Woqooyi galbeed ee [[Soomaaliya]]. Deegaanka iyo nawaaxigiisaba waxaa Degan Beesha [[Tiinle]].<ref>https://www.bbc.com/somali/war-44906751.amp</ref>
 
 ==Taariikh==
 ==Juquraafiga==
