--- a/Af_Urur.mw
+++ b/Af_Urur.mw
@@ -61,6 +61,8 @@
 '''Af Urur''' Waa tuulo ku taalo [[Buuraha Golis]] waa deegaan aad u balaaran oo leh wax soosaar kala duwan, Tuulada Afurur waxaa ku nool dad aan tiro ahaan yareen, Waxaa ku yaala Saldhig weyn oo ciidamada Difaaca [[Puntland]] Leeyihiin. Waana goob Muhiim u ah difaaca guud ahaan woqooyi bari & Woqooyi galbeed ee [[Soomaaliya]]. Deegaanka iyo nawaaxigiisaba waxaa Degan Beesha [[Tiinle]].<ref>https://www.bbc.com/somali/war-44906751.amp</ref>
 
 ==Taariikh==
+Af Urur waxaa asaasay bulshada beesha Tiinle xili aad u horeeyay.
+
 ==Juquraafiga==
 
 
