*Empty MediaWiki Message*

--- a/Harti.mw
+++ b/Harti.mw
@@ -1,3 +1,4 @@
+[[File:Harti darod.png|thumb|Harti]]
 
 '''Harti''' ({{lang-en|''Hartie''}}, {{lang-ar|هارتي}}), micnaheedu tahay "nin adag", waa magaca looyaqaano beel ka mid ah [[Daarood]]ka.<ref>Drake-Brockman, p.55.</ref>
 
