*Empty MediaWiki Message*

--- a/Liska_Wadada_Somaliland.mw
+++ b/Liska_Wadada_Somaliland.mw
@@ -3,22 +3,22 @@
 
 Wadada |{{flag|Somaliland}}
 '''
-
-
-|{{flag|Somaliland}}*  Highway Number      1       [[Hargeisa]] - [[Berbera]]
-
-
-|{{flag|Somaliland}}*  Berbera Wadada               [[Berbera]] - [[Burco]]
-
-
-|{{flag|Somaliland}}* wadada odewayne               [[Oodwayne]]- [[Burco]]
-
-
-|{{flag|Somaliland}}*  Guleed Haji Highway 2        [[Oodwayne]] -  [[Hargeisa]]
-
-
-|{{flag|Somaliland}}*  Balli alanle - Bohtole Rd [[Bohtole]] Darkein genyo Rd  [[Darkein Genyo]]--------------{{Flag|Ethiopia}}Borderka Wadanka
-
+* 
+* 
+* |{{flag|Somaliland}}*  Highway Number      1       [[Hargeisa]] - [[Berbera]]
+* 
+* 
+* |{{flag|Somaliland}}*  Berbera Wadada               [[Berbera]] - [[Burco]]
+* 
+* 
+* |{{flag|Somaliland}}* wadada odewayne               [[Oodwayne]]- [[Burco]]
+* 
+* 
+* |{{flag|Somaliland}}*  Guleed Haji Highway 2        [[Oodwayne]] -  [[Hargeisa]]
+* 
+* 
+* |{{flag|Somaliland}}*  Balli alanle - Bohtole Rd [[Bohtole]] Darkein genyo Rd  [[Darkein Genyo]]--------------{{Flag|Ethiopia}}Borderka Wadanka
+* 
 
 
 
