*Empty MediaWiki Message*

--- a/Magrib_(Gobol).mw
+++ b/Magrib_(Gobol).mw
@@ -64,7 +64,7 @@
 
 {| class="wikitable"
 ![[File:Algiers_coast.jpg|left|thumb|300x300px|[[Algiers]], [[Aljeeriya|Algeria]]]]
-![[File:Algiers_coast.jpg|left|thumb|300x300px|[[Algiers]], [[Aljeeriya|Algeria]]]]
+![[File:Old town sight.JPG|thumb|right|250px|Bengazi, la vila vièlha]]
 ![[File:Casablanca_-_Morocco_008.jpg|left|thumb|300x300px|Casablanca, [[Marooko|Morocco]]]]
 |-[[File:African_Dinner-01.jpg|right|thumb|Cunta dhaqameedka magrib]]
 |[[File:Ida_Ou_Nadif_head_ornament_(19th_century).jpg|thumb|220x220px|Katiinad Madax gashi (Morooko)]]
