*Empty MediaWiki Message*

--- a/Hamoud_Boualem.mw
+++ b/Hamoud_Boualem.mw
@@ -1,4 +1,4 @@
-[[File:Hamoud logo.png|700px|thumb|right|Hamoud Boualem sharaabka , Algeria ]]
+[[File:Hamoud logo.png|700px|thumb|Right|Hamoud Boualem sharaabka , Algeria]]
 
 
 
