*Empty MediaWiki Message*

--- a/Garaadtooyada_reer_darawiish.mw
+++ b/Garaadtooyada_reer_darawiish.mw
@@ -1,4 +1,4 @@
 [[File:Garaadaha Guud Reer Darawiish.png|thumb|garaadaha guud reer darawiish]]
-Garaadada (af-ingiriis: Dhulbahante garaadship) waa boqortooyo oo [[Dhulbahante]] ah uu dhexeysey sanadaha 1530 ilaa 1895 oo ka tirsan abtirsiga Baharsame. Garaadada Dhulbahante waxaa dawladda kuxigeenka ahayd dawladda [[Darwiish]].
+Garaadada (af-ingiriis: Dhulbahante garaadship) waa boqortooyo oo [[Dhulbahante]] ah uu dhexeysey sanadaha 1530 ilaa 1895 oo caasimada ahayd Buuhoodle. oo ka tirsan abtirsiga Baharsame. Garaadada Dhulbahante waxaa dawladda kuxigeenka ahayd dawladda [[Darwiish]].
 
 [[Category:Taariikh]]
