*Empty MediaWiki Message*

--- a/Hamoud_Boualem.mw
+++ b/Hamoud_Boualem.mw
@@ -1,6 +1,6 @@
-[[File:Hamoud logo.png|700px|thumb|Right|Hamoud Boualem sharaabka , Algeria]]
+[[File:Hamoud logo.png|700px|thumb|right|Hamoud Boualem sharaabka , Algeria]]
 
-[[File:1889_Selecto_ad.jpg|thumb|200px|A vintage advert poster of the brand]]
+[[File:1889_Selecto_ad.jpg|thumb|700px|]]
 
 
 '''Sharaab- Hamoud Boualem'''
