*Empty MediaWiki Message*

--- a/Hamoud_Boualem.mw
+++ b/Hamoud_Boualem.mw
@@ -1,5 +1,6 @@
 [[File:Hamoud logo.png|700px|thumb|right|Hamoud Boualem sharaabka , Algeria]]
 
+[[File:Photo hamoud boualem 24102014.jpg|300px|vignette|droite|warshadka Hamoud Boualem]]
 [[File:1889_Selecto_ad.jpg|thumb|700px|]]
 
 
