--- a/Hamoud_Boualem.mw
+++ b/Hamoud_Boualem.mw
@@ -1,7 +1,7 @@
 [[File:Hamoud logo.png|700px|thumb|right|Hamoud Boualem sharaabka , Algeria]]
 
-[[File:Photo hamoud boualem 24102014.jpg|300px|vignette|droite|warshadka Hamoud Boualem]]
-[[File:1889_Selecto_ad.jpg|thumb|700px|]]
+[[File:Photo hamoud boualem 24102014.jpg|800px|right|thumb|vignette|droite|warshadka Hamoud Boualem]]
+[[File:1889_Selecto_ad.jpg|thumb|300px|]]
 
 
 '''Sharaab- Hamoud Boualem'''
