*Empty MediaWiki Message*

--- a/Shaax.mw
+++ b/Shaax.mw
@@ -1,9 +1,41 @@
-[[File:Tea-224-nevit.jpg|thumb|Shaax]]
-[[File:World Map Tea Production.svg|thumb|Wadamada beera Geedka Shaaha]]
+[[File:Tea-224-nevit.jpg|thumb|400px|Shaax]]
+[[File:World Map Tea Production.svg|thumb|700px|Wadamada beera Geedka Shaaha]]
+[[File:Tea bag.JPG|thumb|right|500px|shaax,Macaduwan]]
+
 '''Shaax''' ama '''Shaah''' waa cabitaan kulul, oo dadka energi siiyo!
 shaaxa waxaa laga sameeyaa geed caleentiis, waxoona ka baxaa wadamada qaarkood, soomaaliya woo ka baxaa. shaax waxoo dhaqan ka yahay wadamada aasiya gaar ahaan wadanka hindiya, [[aduunka]] oo dhan neh waa laga isticmaalaa.
 soomaalida badankooda shaaxa waxee isticmaalaan galabtiga cassirka iyo subixi aroorti.
 Cuntada neh wee ku cunaan, sida Canjeerada ama Muufada.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 ==Sidoo kale eeg==
 *[[Bun]]
