*Empty MediaWiki Message*

--- a/FC_Bayern_München.mw
+++ b/FC_Bayern_München.mw
@@ -1,55 +1,16 @@
-{{
-| current = 2013–14 FC Bayern Munich season
-| fullname = Fußball-Club Bayern München e.&nbsp;V.
-| founded = {{Start date and years ago|df=yes|1900|2|27}}
-| nickname = ''Der FCB'' (The FCB)<br />''Die Bayern'' (The Bavarians)<br />''Stern des Südens'' (Star of the South)<br />''Die Roten'' (The Reds)
-| ground = [[Allianz Arena]]
-| capacity = 71,137
-| chrtitle = President
-| chairman = [[Uli Hoeneß]]
-| manager = [[Pep Guardiola]]
-| league = [[Bundesliga]]
-| season = [[2012–13 Bundesliga|2012–13]]
-| position = Bundesliga, 1st
-| pattern_la1 = _FCBAYERN_1314h
-| pattern_b1  = _FCBAYERN_1314h
-| pattern_ra1 = _FCBAYERN_1314h
-| pattern_sh1 = _FCBAYERN_1314h
-| pattern_so1 = _FCBAYERN_1314h
-| leftarm1    = FFFFFF
-| body1       = FFFFFF
-| rightarm1   = FFFFFF
-| shorts1     = FFFFFF
-| socks1      = DD0000
-| pattern_la2 = _FCBAYERN_1314a
-| pattern_b2  = _FCBAYERN_1314a
-| pattern_ra2 = _FCBAYERN_1314a
-| pattern_sh2 = _FCBAYERN_1314a
-| pattern_so2 = _FCBAYERN_1314a
-| leftarm2    = FFFFFF
-| body2       = FFFFFF
-| rightarm2   = FFFFFF
-| shorts2     = FFFFFF
-| socks2      = FFFFFF
-| kittitle3  = Champions League
-| kit_alt3   = Champions League
-| pattern_la3 = _FCBAYERN_1314t
-| pattern_b3  = _FCBAYERN_1314t
-| pattern_ra3 = _FCBAYERN_1314t
-| pattern_sh3 = _FCBAYERN_1314t
-| pattern_so3 = _FCBAYERN_1314t
-| leftarm3    = FFFFFF
-| body3       = FFFFFF
-| rightarm3   = FFFFFF
-| shorts3     = FFFFFF
-| socks3      = 233B83
-| website = http://www.fcbayern.t-home.de/en
-}}
 
-'''FC Bayern München''' waa koox-banooni oo kuyaalo magaaladda [[München]] ee dalka [[Jarmalka]]
+
+'''FC Bayern München'''
+
+{{Flag|Germany}}
+ waa koox-banooni oo kuyaalo magaaladda [[München]] ee dalka [[Jarmalka]]
+
+
+[[File:FC Bayern München logo (2017).svg|thumb|right|400px]]
 [[File:Allianz Arena Pahu.jpg|right|thumb|500px|FC Bayern München]]
 
 == Laacibada FC Bayern München 2012-2013 ==
+
 {| class="wikitable"
 ! '''Nambar'''
 ! '''Magac'''
