--- a/Af_Urur.mw
+++ b/Af_Urur.mw
@@ -5,7 +5,7 @@
 | nickname               = 
 | settlement_type        = [[Magaalo]]
 | motto                  = 
-| image_skyline          = [[file:Af_urur_overviee.jpg|thumb|Sawir Af Urur]]
+| image_skyline          =
 | imagesize              = 
 | image_caption          = 
 | image_flag             = 
