*Empty MediaWiki Message*

--- a/Katrina_Kaif.mw
+++ b/Katrina_Kaif.mw
@@ -1,7 +1,7 @@
 {{wargelin|Qoraalka bogan waa mid uqoran si qaab daran ama ka samaysan luuqad qalaad. Fadlan naga caawi turjumaada.}}
 {{Infobox person
 |name=Katrina Kaif
-|image=Katrina at IIFA 2017 (cropped).jpg|alt=A headshot of Katrina Kaif
+|image=Katrina Kaif Launches Lakme Sun Expert New Product 02.jpg|alt=
 |caption=|birth_name=Katrina Turquotte
 |birth_place=[[Ingiriiska Hong Kong]]
 |height=
