*Empty MediaWiki Message*

--- a/Cawramale.mw
+++ b/Cawramale.mw
@@ -1,3 +1,4 @@
+[[File:SSC insignia.jpg|thumb|calan harti waqooyi]]
 '''Cawrmale''' [[Af-Ingiriisi]] 'Awramale' [[Af-Carabi]] "عورملي" waa  qabiil ka mida  beelwaynta [[Warsangali]] waxay badanaa deegaan ku yihiin gobollada koonfurta [[soomaaliya]], [[Jubbada Hoose]], [[Jubbada Dhexe]], [[Baay]], [[Bakool]] [[Gedo]], [[Shabeellaha Dhexe]] [[Sanaag]], [[Hiiraan]] iyo [[Banaadir]]...
 
 Beeshu waa qabiilka ugu tunka wayn beelaha dega jubbada hoose waxayna dhaqataa oo ay leedahay noocyada kala duwan ee xoolaha nafleyda ah sida Geela, lo'da, iyo Ariga Geela ayayna dadkeedu badanaa aad u dhaqdaan.
