*Empty MediaWiki Message*

--- a/Template:Infobox_beverage.mw
+++ b/Template:Infobox_beverage.mw
@@ -16,7 +16,7 @@
 | data3   = {{{distributor|}}}
 | label4  = Wadanka asalka
 | data4   = {{{origin|}}}
-| label5  = Caan bixiyey
+| label5  = La soo bandhigay
 | data5   = {{{introduced|{{{year|}}} }}}
 | label6  = Discontinued
 | data6   = {{{discontinued|{{{last_year|}}} }}}
