*Empty MediaWiki Message*

--- a/Diinsoor.mw
+++ b/Diinsoor.mw
@@ -22,7 +22,7 @@ Diinsoor waa magaalo barakeysan, marka la eego wadanka somali. dadka dego waa da
 
 Degmada Diinsoor waa degmada keli ah oo dagaalka sokeeye uusan weli saamaynin magaaladana maalinba maalinta kadanbeyso waysii weeynaaneeysaa amaankeeda dartiisa. 
 
-Degmada Diinsoor waa degmada ugu weyn degmooyinka [[Soomaaliya]] oo dhan xitaa waxaa ka weyntahay qaar ka mid magaalo madaxyaalka qobolooyinka qaarkood.
+Degmada Diinsoor waa degmada ugu weyn degmooyinka [[Somalia]] oo dhan xitaa waxaa ka weyntahay qaar ka mid magaalo madaxyaalka qobolooyinka qaarkood.
 
 '''Beelaha dega:'''
 
