*Empty MediaWiki Message*

--- a/Template:Infobox_beverage.mw
+++ b/Template:Infobox_beverage.mw
@@ -45,4 +45,4 @@
 | label18 = Website
 | data18  = {{{website|}}}
 
-}}<includeonly>{{#ifeq:{{NAMESPACE}}|{{ns:0}}|[[Category:Bog]]}}</includeonly><noinclude>{{documentation}}</noinclude>
+}}<includeonly>{{#ifeq:{{NAMESPACE}}|{{ns:0}}|[[Category:Maqaallada leh hRecipes]][[Category:Maqaallada leh hProducts]]}}</includeonly><noinclude>{{documentation}}</noinclude>
