--- a/Hamoud_Boualem.mw
+++ b/Hamoud_Boualem.mw
@@ -1,19 +1,17 @@
-[[File:Hamoud logo.png|700px|thumb|right|Hamoud Boualem sharaabka , Algeria]]
+{{Infobox Beverage
+|name=Hamoud Boualem
+|image= [[File:1889_Selecto_ad.jpg|200px]]
+|type=
+|manufacturer=
+|origin= [[Algeria]]
+|introduced= {{start date and age|1920}}
+|discontinued=
+|colour =
+|related= 
+|variants=
+}}
 
-[[File:Photo hamoud boualem 24102014.jpg|800px|right|thumb|vignette|droite|warshadka Hamoud Boualem]]
-[[File:1889_Selecto_ad.jpg|thumb|300px|]]
-
-https://www.hamoud-boualem.com/fr/
-
-
-
-'''Sharaab- Hamoud Boualem'''
-
-{{Flag|Algeria}}
-
-
-Shirkad cabitaan fudud oo laga keenay algeria, oo ay ka helaan dhadhan badan, ayaa laga sameeyay woqooyiga Afrika,
-
+'''Hamoud Boualem''' waa Shirkad [[Algeria|Algerian]] oo soo saarta cabitaanka fudud. Shirkada waxaa la aasaasay 1879ki.
 
 
 
@@ -27,45 +25,5 @@ Shirkad cabitaan fudud oo laga keenay algeria, oo ay ka helaan dhadhan badan, ay
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-==Sido kale fiiri==
+{{Gumud}}
+[[category:Shirkadaha cuntada iyo cabitaanka ee Algeria]]
