*Empty MediaWiki Message*

--- a/Diinsoor.mw
+++ b/Diinsoor.mw
@@ -14,7 +14,7 @@ degmadaa
 
 '''Wax soo saarka degmada:'''  
 
-Degmada Diinsoor waxaa ku wareegsan Buuro, marka laga reebo dhinaca Woqooyi oo ay ku leedahay Dhul beereed aad u weyn, waxayna caan ku tahay dhaqashada Xoolaha iyo Beeraha, dhulkeeduna wuxuu isugu jiraa Buuraley, Dhul Beereed,  daaqsan leh in ka badan 200 nooc oo dhir ah, kuwaasoo ay ka mid yihiin Geedka Galoolka, Xararr, Dambal, Yaaq, Quracyo waaweyn, Cadaada, Xanannka iyo Geed miroodyo fara badan oo leh Xamur Gobka, Xamur, Mareer, Xanshile, Hohobta iyo kuwo kale oo fara badan, waxay kaloo degmada Diinsoor leedahay Dhul banaan ah iyo Dooxooyin waaweyn oo xiliga Roobku uu da’ayo ay maraan Biyaha Xareeda oo ay soo rogaan Buuraha iyo dhulka Taaga ah, islamarkaana ku shuba Wabi Shabeele iyo Juba. 
+Degmada Diinsoor waxaa ku wareegsan Buuro, marka laga reebo dhinaca Woqooyi oo ay ku leedahay Dhul beereed aad u weyn, waxayna caan ku tahay dhaqashada Xoolaha iyo Beeraha, dhulkeeduna wuxuu isugu jiraa Buuraley, Dhul Beereed,  dhul daaqsimeed in ka badan 200 nooc oo dhir ah, kuwaasoo ay ka mid yihiin Geedka Galoolka, Xararr, Dambal, Yaaq, Quracyo waaweyn, Cadaada, Xanannka iyo Geed miroodyo fara badan oo leh Xamur Gobka, Xamur, Mareer, Xanshile, Hohobta iyo kuwo kale oo fara badan, waxay kaloo degmada Diinsoor leedahay Dhul banaan ah iyo Dooxooyin waaweyn oo xiliga Roobku uu da’ayo ay maraan Biyaha Xareeda oo ay soo rogaan Buuraha iyo dhulka Taaga ah, islamarkaana ku shuba Wabi Shabeele iyo Juba. 
 
 Inkastoo gobolada [[baay]] iyo [[bakool]] lagu tilmaamo goob diinta loosoo raadsado diinsoor waxay kamid tahay goobta ugu horeyso oo xifdinta quraanka iyo raacashada cilmiga loosoo raadsado.
 
