*Empty MediaWiki Message*

--- a/Degmada_Faraweyne.mw
+++ b/Degmada_Faraweyne.mw
@@ -1,3 +1,21 @@
-Degmada Faraweyne waxa ay ka mid tahay degmooyinka qadiimka ah ee jiray ilaa waqtiyadii gumaystaha ingiriiska, degmada Faraweyne waxa ay dhacdaa dhinaca koonfur galbeed ee caasimada somaliland ee Hargeysa, waxayn ku taalaa xadka u dhaxeeya labada dawladood ee Somaliland iyo Itobiya, xadkaas oo uu sameeyey gumaystihii ingiriisku.
-Degmada Faraweyne waxa ay ku fadhidaa deegaan balaadhan oo ka kooban ilaa 20 tuulo, tuulooyinkaas waxa ka mid ah kuwan soo socda:
-Xaraf, Xareed, Xagal, Abuuriin, dhaboolaq, Gadhyogol, Garabis, Wadabariis, Sayla, Goryo, Cabdisamad, shimbiraale, Lafta-faraweyne, cadaroosh, Maraaga, Wado-makaahiil, Magaalo xoosh iyo tuulooyin kale.
+'''Degmada Faraweyne ee Gobolka Maroodijeex''', waxay ka mid ahayd degmo sugayaashii (Sub-district) 1960-kii, xuduuddaheeduna waxay kala ahaayeen dhinaca Ooggada xadka Somaliland iyo Itoobiya, kuna dherreran dhinaca Galbeedka Balayga Abu-site oo Afar (4 Km) u jirta Alaybaday illaa Bariga Tuulada Gumar oo Gumarri ku jirto Faraweyne kana baxsan tahay Salaxlay. Dhinaca Waqooyi waxay ku ekayd Tuulada Ceel Lahelay.
+Saddex iyo sodonkii kursi Baarlamaan ee Somaliland 1960-kii, degmada Faraweyne waxay ku lahayd Hal Kursi Baarlamaan oo laga soo doortay Cali Mahdi, kana soo jeeday degmada.
+Waqtigii halganka degmadanni waxay ka mid ahayd meelihii dalka laga xorreeyay, gaar ahaana Hargeysa. Arrimaha sida gaarka ah ugu xusan waxa ka mid ah: -
+Bishii January 1987, Bixitaankii Ciidankii la magac baxay Gaaska-cad oo tiradiisu dhammayd 105 Askari iyo Taliyahoodii Mujaahid Cumar Jaamac, saanaddiisuna u dhan tahay, dhammaantoodna ka soo jeeda degmadan.
+Bishii April 1987, Qaxootigii u horreeyay ee loo aqoonsado qaxooti ahaan, waxay ahaayeen Xaasaskii iyo Caruurtii Ciidankii Gaaska-cad ee ku biiray Halgakii SNM.
+Bishii October 1984, Xasuuqii Reer-miyigii xoolo dhaqatada ahaa ee degaanka Tuulada Sheekh Waafi.
+Xaruntii SNM ee Aaga galbeed ahaydna Tuulada lafta-faraweyne ee degmadan.
+1989 Aasaskii Gollaha Guurtida, waxay ahayd Tuullada Cadaroosh.
+Ceelkii kaliya ee Ooggada Hargaysa biyo laga cabayay waxa uu ahaa Ceelka Dhaboolaq oo loo galiwaayay Ciidankii Aagaa ee SNM iyo Ciidan-beeleedkii la magac baxay Gaas-dhagoollaha.
+Bishii May 1988, Aagii SNM ka soo gashay Hargeysa, waxay ahayd, Wado-halgan oo isla degmadan ah.
+Intii Somaliland la soo noqotay Madaxbanaanideeda, waxa degmadii Faraweyne laga jaray, saddex degmo oo kala ah Degmada Daara-salaam, Degmada Balay Cabane iyo Degmada Sayla-bari. Intaas oo ka go'day, maanta waxa lagu qiyaasaa baaxadeeda dhulleed laba kun oo kilo mitir laba jibaaran Waxa hoos yimaada Sodon iyo sideed Tuullo iyo deegaannadooda, walina waxa Darajadeeda lagu sheegaa, heerka derajo-degmo tan ugu hoosaysa oo ah (D).
+Sidaas oo ay tahay doorashadii Madaxtooyada Somaliland ee qabsoontay 13 kii November 2017, waxa ka codeeyay 11,450 qof, kana badan Gobollada iyo Degmooyinka hoos ku qoran.
+Gobolka hawd oo afar degmo kala ah: -
+Degmada Balay gubadle, Degmad a Balay Cabane, Degmada Sayla-bari iyo Degmada Gunburaha, Waxa ka coddeeyay, tiro dhan 8679 qof.
+Gobolka Salal oo Afar 4 degmo ah: -
+Degmada Saylac, Degmada Garbadadar, Degmada Boon iyo Degmada Xariirad, Waxa ka coddeeyay tiro dhan 9563 qof.
+Degmada Lughaya oo Darajadeedu (B) ah, Waxa ka codeeyay,tiro dhan 7615 qof.
+Degmada Baki oo Derajada (B) ah, Waxa ka codeeyay tiro dhan 10718 qof
+Degmada Salaxley Derajada (C) ah, Waxa ka coddeeyay 8288 qof.
+
+W/Q: Gud. '''Maxamed Cabdi Gargaare''', 23/ 01/2018, Hadhwanaagnews & Karinnews.
