--- a/FC_Bayern_München.mw
+++ b/FC_Bayern_München.mw
@@ -1,13 +1,59 @@
+{{Short description|German multi-sport club, noted for its association football team}}
+{{Infobox football club
+| clubname           = Bayern Munich
+| fullname           = Fußball-Club Bayern München e.&nbsp;V.
+| image              = FC Bayern München logo (2017).svg
+| upright            = .8
+| alt                = crest
+| current            = 2019–20 FC Bayern Munich season
+| founded            = {{Start date and years ago|df=yes|1900|2|27}}
+| nickname           = ''Der FCB'' (The FCB)<br/>''Die Bayern'' (The Bavarians)<br/>''Stern des Südens'' (Star of the South)<br/>''Die Roten'' (The Reds)<ref>{{cite web|title=Never-say-die Reds overcome Ingolstadt at the death|url=https://fcbayern.com/en/news/matchreports/2017/02/match-report-bundesliga-fc-ingolstadt---fc-bayern-11.02.2017|publisher=FC Bayern Munich|accessdate=12 February 2017|url-status=live|archiveurl=https://web.archive.org/web/20170212164904/https://fcbayern.com/en/news/matchreports/2017/02/match-report-bundesliga-fc-ingolstadt---fc-bayern-11.02.2017|archivedate=12 February 2017}}</ref><br/>FC Hollywood<ref>{{cite web |url=http://www.goal.com/en-us/news/174/uefa-champions-league/2010/04/08/1869197/cl-comment-van-gaals-bayern-give-new-meaning-to-fc-hollywood |title=CL Comment: Van Gaal's Bayern Give New Meaning to "FC Hollywood" |website=Goal.com |date=8 April 2010 |accessdate=28 September 2014 |first=Clark |last=Whitney |url-status=live |archiveurl=https://web.archive.org/web/20140629015812/http://www.goal.com/en-us/news/174/uefa-champions-league/2010/04/08/1869197/cl-comment-van-gaals-bayern-give-new-meaning-to-fc-hollywood |archivedate=29 June 2014 }}</ref>
+| short name         = Bayern
+| ground             = [[Allianz Arena]]
+| capacity           = 75,000<ref>{{cite web |url=http://www.fcbayern.de/de/news/news/2015/ab-sofort-75-000-fans-bei-bundesliga-heimspielen-genehmigung-130115.php |title=Ab sofort 75.000 Fans bei Bundesliga-Heimspielen |trans-title=As of now 75,000 for Bundesliga home matches |publisher=FC Bayern Munich |date=13 January 2015 |accessdate=13 January 2015 |url-status=live |archiveurl=https://web.archive.org/web/20150113190119/http://www.fcbayern.de/de/news/news/2015/ab-sofort-75-000-fans-bei-bundesliga-heimspielen-genehmigung-130115.php |archivedate=13 January 2015 }}</ref>
+| owntitle           = Madaxweynaha
+| owner              = [[Herbert Hainer]]
+| chairman           = [[Karl-Heinz Rummenigge]]
+| manager            = [[Hans-Dieter Flick]]
+| league             = 
+| season             = 
+| position           = 
+| pattern_la1        = _bayern2021h
+| pattern_b1         = _fcbm2021h
+| pattern_ra1        = _bayern2021h
+| pattern_sh1        = _adidascondivo20rw
+| pattern_so1        = _3_stripes_white
+| leftarm1           = FF0000
+| body1              = FF0000
+| rightarm1          = FF0000
+| shorts1            = FF0000
+| socks1             = FF0000
+| pattern_la2        = _bayern2021a
+| pattern_b2         = _bayern2021A
+| pattern_ra2        = _bayern2021a
+| pattern_sh2        = _bayern2021a
+| pattern_so2        = _bayern2021a
+| leftarm2           = C2C2C2
+| body2              = EFEFEF
+| rightarm2          = C2C2C2
+| shorts2            = FFFFFF
+| socks2             = FFFFFF
+| pattern_la3        = 
+| pattern_b3         = 
+| pattern_ra3        = 
+| pattern_sh3        = 
+| pattern_so3        = 
+| leftarm3           = 
+| body3              = 
+| rightarm3          = 
+| shorts3            = 
+| socks3             = 
+| website            = http://www.fcbayern.de/en/
+}}
 
+'''FC Bayern München''' waa naadi jarmal ee kubada cagta ah oo xaruntiisu tahay magaalada [[Munchen]] ee caasimada [[Bavaria]]. 
 
-'''FC Bayern München'''
-
-{{Flag|Germany}}
-
-waa koox-banooni oo kuyaalo magaaladda [[München]] ee dalka [[Jarmalka]]
-[[File:FC Bayern München logo (2017).svg|thumb|right|400px]]
-[[File:Allianz Arena Pahu.jpg|right|thumb|500px|FC Bayern München]]
-== Laacibada FC Bayern München 2012-2013 ==
+== Laacibiinta FC Bayern München 2012-2013 ==
 
 {| class="wikitable"
 ! '''Nambar'''
@@ -112,5 +158,21 @@ waa koox-banooni oo kuyaalo magaaladda [[München]] ee dalka [[Jarmalka]]
 | [[Jarmalka]]
 |}
 
-[[Category:Naadiyaasha kubada Cagta]]
-[[Category:Ciyaaraha]]
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+==Tixraac==
+[[Category:Naadiyada kubbadda cagta ee Jarmalka]]
+[[Category:FC Bayern Munich]]
