*Empty MediaWiki Message*

--- a/Cal_Miskaad.mw
+++ b/Cal_Miskaad.mw
@@ -1,4 +1,4 @@
-'''Cal Miskaad''' sidoo kale loo yaqaan '''Buuraleyda Cal Miskaad''', waa silsilad buuraley ah oo ka tirsan silsilada buuraha [[Golis]]. Waxaa ku yaala [[Buurta Baxaya]] oo ah buurta labaad ee ugu dheer dalka [[Soomaaliya]], iyo buuraha habeeno, marmar, buurta buur-badeed iyo meelo kale.
+'''Cal Miskaad''' sidoo kale loo yaqaan '''Buuraleyda Cal Miskaad''', waa silsilad buuraley ah oo ka tirsan silsilada buuraha [[Golis]]. Waxaa ku yaala [[Buurta Baxaya]] oo ah buurta saddexaad ee ugu dheer dalka [[Soomaaliya]], iyo buuraha [[Habeeno]], Marmar, buurta buur-badeed, [[Fadhisame]] iyo meelo kale.
 
 ==External Links==
 *https://radiokulmiye.net/2020/05/15/al-shabaab-oo-weerar-ku-qaaday-gobolka-bari/
