Bog loo bedeley [[Galguduud]]

--- a/Galgaduud.mw
+++ b/Galgaduud.mw
@@ -1,7 +1,1 @@
-Beesha Cigale Axmed Saleebaan Maxaad ka taqaan 
-
-Beesha Cigale waa beel kamid ah beelaha Saleebaan oo kamid ah beelaha Habargidir 
-
-Beeshaan oo degta Dhul balaaran ayaa kamid ah beelaha Saleebaan ugu weyn,
-
-Waxey xad ahaa dagaan oo ay ubadan yihiin laga soo bilaabo Xarardheere ii ilaa iyo dowlad deegaanka Soomaalida Ethiopia
+#REDIRECT [[Galguduud]]
