*Empty MediaWiki Message*

--- a/Harti_Galbeed.mw
+++ b/Harti_Galbeed.mw
@@ -1,4 +1,5 @@
 Harti Galbeed waa qabiil oo ka tirsan: Dhulbahante, Warsangeli, Dishiishe, Kaskiqabe, libaangashe, Geesaguule. 
+[[File:SSC insignia.jpg|thumb|calan harti waqooyi]]
 
 
 *Harti galbeed
