*Empty MediaWiki Message*

--- a/Boosaaso.mw
+++ b/Boosaaso.mw
@@ -128,6 +128,7 @@ Isgooyska Barxadda Gaaca waa kan ugu mashquulka badan Magaalada. waana mid ka mi
 |}
 
 ==Sidoo kale fiiri==
+*[http://reliefweb.int/sites/reliefweb.int/files/resources/120223_OCHASom_Administrative_Map_Bari_Bossaso_A3.pdf Administrative map of Bosaso District]
 *[[Liiska magaalooyinka Soomaaliya dadka ku nool]]
 *[[Liiska magaalooyinka Soomaaliya]]
 
