--- a/Si'iid_Harti.mw
+++ b/Si'iid_Harti.mw
@@ -23,6 +23,9 @@ Asal ahaan odaygii Daarood ahaa waxa uu ku yimid Yaman Jabarti Ismaaciil isaga o
 ==Ciyaaraha==
 Ciyaaraha [[Dhulbahante]] waxaa ka mid ah [[Jandheer]].
 
+==Jilibada==
+Jilibada reer darawiish ee ugu weyn waa Ugaadhyahan. Jibalada reer darawiish labaad ee ugu weyn waa Axmed garaad. Jilibada reer darawiish ee saddexaad ee ugu weyn waa Jama Siyad iyo Qayaad. Jilibada reer darawiiish ee afaraad ee ugu weyn waa Reer Hagar iyo Hayaag. Jilibada reer darawiish ee shanaad ee ugu weyn waa Baharsame.
+
 ==Shuruudaha==
 Shuruudaha Dhulbahante ama Beesha Darawiish waxaa ka mid ah:
 *Shuruudaha bandhigta Ismail Mire
