--- a/Harti.mw
+++ b/Harti.mw
@@ -3,7 +3,7 @@
 '''Harti''' ({{lang-en|''Hartie''}}, {{lang-ar|هارتي}}), micnaheedu tahay "nin adag", waa magaca looyaqaano beel ka mid ah [[Daarood]]ka.<ref>Drake-Brockman, p.55.</ref>
 
 ==Sharaxaad==
-Harti waxaa lagu naaneysaa harti koombe, waxaana ka mid ah [[Beesha Darawiish]], [[Maxamed harti]]ka [[Axmed harti]]  iyo [[Maxamuud harti]]ga.
+Harti waxaa lagu naaneysaa harti koombe, waxaana ka mid ah [[Beesha Darawiish]], [[Maxamed harti]]ka [[Axmed harti]]  iyo [[Maxamuud harti]]ga. Jilibada oo Harti ah ee ugu weyn waa Biciidyahan (oo Majeerteen ah), Ugaadhyahan (oo [[reer darawiish]] ah), Siwaqroon (oo Majeerteen ah), Baharsame (oo [[reer darawiish]] ah), Wabeeneeye (oo majeerteen ah), Qayaad (oo [[reer daraawiish]] ah), Dubays (oo Warsangeli ah), Bah Nugal (oo [[reer darawish]] ah), Cismaan Maxamud (oo Majeerteen ah), Jama Siyad (oo [[reer daraawish]] ah), Cumar (oo Warsangeli ah), Reer Hagar (oo [[Reer Darawiish]] ah), Ogayslabe (oo Warsangeli ah), Cali Gheri (oo [[Reer Darwiish]] ah), Cawramale (oo Warsangeli ah), Hayaag (oo reer darawiish ah), Ciise Maxamud (oo Majeerteen ah), Ararsame (oo [[reer darwiish]] ah), Jibraahil (oo Majeerteen ah), Barkad (oo [[reer darawiish]] ah), Gumasoor (oo Majeerteen ah), Naleeye Axmed (oo [[reer daraawiish]] ah).<ref>Nuur, A., AfQarshe, A. D., Fiqiburaale, D., & Jaamac, A. (2013). Fardo-Cavalli.</ref>
 
 ==Daarood==
 [[File:Dhulbahante flag.png|thumb|Calanka Dhulbahante]]
