*Empty MediaWiki Message*

--- a/Sanaag.mw
+++ b/Sanaag.mw
@@ -12,7 +12,7 @@
 |image_flag             = 
 |image_seal             = 
 |image_shield           = 
-|image_map              =Somaliland regions map Sanaag.png
+|image_map              =Somalia regions map Sanaag.png
 |mapsize                = 
 |map_caption            =Meesha kaga taalo Somaliland.
 |coordinates_display    =inline,title
