*Empty MediaWiki Message*

--- a/Sanaag.mw
+++ b/Sanaag.mw
@@ -18,7 +18,7 @@
 |coordinates_display    =inline,title
 |coordinates_region     =SO
 |subdivision_type       =Wadanka
-|subdivision_name       ={{flag|Somaliland}}
+|subdivision_name       ={{flag|Somalia}}
 |subdivision_type1      =
 |subdivision_name1      =
 |seat_type              =Caasimada
