--- a/Sanaag.mw
+++ b/Sanaag.mw
@@ -14,7 +14,7 @@
 |image_shield           = 
 |image_map              =Somalia regions map Sanaag.png
 |mapsize                = 
-|map_caption            =Meesha kaga taalo Somaliland.
+|map_caption            =Meesha kaga taalo Soomaaliya.
 |coordinates_display    =inline,title
 |coordinates_region     =SO
 |subdivision_type       =Wadanka
