*Empty MediaWiki Message*

--- a/Yalho.mw
+++ b/Yalho.mw
@@ -60,7 +60,8 @@
 | footnotes              = 
 }}
 
-'''Yalho''' waa Magaalo ku taal gobolka [[bari]] [[puntland]] [[soomaaliya]], waxay 50 Kilomitir ka xigtaa dhanka koonfureed magaalada [[Boosaaso]]. Waa Irridda keliya ee gaadiid dhuleed ka soo geli karo Magaalada [[Boosaaso]], Waxaa la asaasay qarnigii 16-aad, Waxay ka mid tahay magaalooyinka ugu qadiimisan dalka soomaaliya<ref>https://burucnews.wordpress.com/2009/05/31/beesha-xaaji-axmed-harti-dishiishe-oo-caleema-saartay-garaad-cusub-sawiro/</ref>. Yalho waa mid kamida magaalooyinka laga helo "Xijiga" waxa kale oo magaaladu leedahay khayraadyo kala duwan oo ay kamid yihiin Dahabka, shidaalka iyo macdanta.
+'''Yalho''', ama '''Yahlo''' waa Magaalo ku taal gobolka [[Bari]] [[Puntland]] [[Soomaaliya]], waxay  {{convert|50|km|mi}} ka xigtaa dhanka koonfureed magaalada [[Boosaaso]]. Waa Irridda keliya ee gaadiid dhuleed ka soo geli karo Magaalada [[Boosaaso]], waxaa la asaasay qarnigii 16-aad, Waxay ka mid tahay magaalooyinka ugu qadiimisan dalka Soomaaliya<ref>https://burucnews.wordpress.com/2009/05/31/beesha-xaaji-axmed-harti-dishiishe-oo-caleema-saartay-garaad-cusub-sawiro/</ref>. Yalho waa mid ka mid ah magaalooyinka laga helo [[Xijji]]ga waxa kale oo magaaladu leedahay khayraadyo kala duwan oo ay ka mid yihiin Dahabka, Shidaalka iyo Macdanta. 
+Waxaa ku fariisin ciidan oo muhiim u ah hubinta waxaayba gelaya gudaha magaalada Boosaaso.
 
 ==Maamulka== 
 Yalho maamul ahaan waxay ka tirsan tahay degmada [[Bosaso]] ee xarunta gobolka bari, Sidoo kale magaaladu waxay leedahay maamul hoosaad waxaana ka jira ururo dhowr ah oo ay leeyihiin qaybaha kala duwan ee bulshada rayidka ah.
