*Empty MediaWiki Message*

--- a/Yalho.mw
+++ b/Yalho.mw
@@ -5,7 +5,7 @@
 | nickname               = 
 | settlement_type        = [[Magaalo]]
 | motto                  = 
-| image_skyline          = 
+| image_skyline          = [[File:Yalho valley.jpg|thumb|Togga yalho]]
 | imagesize              = 
 | image_caption          = Dooxa Yahlo
 | image_flag             = 
@@ -60,7 +60,7 @@
 | footnotes              = 
 }}
 
-'''Yalho''', ama '''Yahlo''' waa Magaalo ku taal gobolka [[Bari]] [[Puntland]] [[Soomaaliya]], waxay  {{convert|50|km|mi}} ka xigtaa dhanka koonfureed magaalada [[Boosaaso]]. Waa Irridda keliya ee gaadiid dhuleed ka soo geli karo Magaalada [[Boosaaso]], waxaa la asaasay qarnigii 16-aad, Waxay ka mid tahay magaalooyinka ugu qadiimisan dalka Soomaaliya<ref>https://burucnews.wordpress.com/2009/05/31/beesha-xaaji-axmed-harti-dishiishe-oo-caleema-saartay-garaad-cusub-sawiro/</ref>. Yalho waa mid ka mid ah magaalooyinka laga helo [[Xijji]]ga waxa kale oo magaaladu leedahay khayraadyo kala duwan oo ay ka mid yihiin Dahabka, Shidaalka iyo Macdanta. 
+'''Yalho''', ama '''Yahlo''' waa Magaalo ku taal gobolka [[Bari]] [[Puntland]] [[Soomaaliya]], waxay  {{convert|50|km|mi}} ka xigtaa dhanka koonfureed magaalada [[Boosaaso]]. Waa Irridda keliya ee gaadiid dhuleed ka soo geli karo Magaalada [[Boosaaso]], waxaa la asaasay qarnigii 16-aad, Waxay ka mid tahay magaalooyinka ugu qadiimisan dalka Soomaaliya<ref>https://burucnews.wordpress.com/2009/05/31/beesha-xaaji-axmed-harti-dishiishe-oo-caleema-saartay-garaad-cusub-sawiro/</ref>. Yalho waa mid ka mid ah magaalooyinka laga helo [[Xijji]]ga waxa kale oo magaaladu leedahay khayraadyo kala duwan oo ay ka mid yihiin Dahabka, Shidaalka iyo Macdanta<ref>http://allsbc.com/duqa-deg-bosaso-oo-socdaalo-kormeer-ku-kala-bixiyey-tuulooyinka-hoos-yimaada-bosasosawiro/</ref>. 
 Waxaa ku fariisin ciidan oo muhiim u ah hubinta waxaayba gelaya gudaha magaalada Boosaaso.
 
 ==Maamulka== 
