*Empty MediaWiki Message*

--- a/Jabuuti.mw
+++ b/Jabuuti.mw
@@ -12,7 +12,7 @@
 |symbol_type = Emblem
 |image_map = LocationDjibouti.svg
 |national_motto = {{native phrase|fr|"Unité, Égalité, Paix"|italics=off}}<br />{{small|"Midnimo, Sinnaan, Nabad"}}
-|national_anthem = ''[[Astaanta Calanka Jabuuti|Jabuuti]]''<br /><center>[[File:The Djiboutian anthem.ogg]]</center>
+|national_anthem = ''[[Astaanta Calanka Jabuuti|Jabuuti]]''<br /><center>[[File:Djibouti anthem Somali lyrics.ogg]]</center>
 |official_languages = {{unbulleted list |[[Af-Faransiis]]<ref name=CIA/>|[[Carabi]]}}
 |national_languages = {{unbulleted list |[[Af-Soomaali]]<ref name=CIA/>|[[Af-Cafari]]}}
 |official_religion = [[Islam]]
