--- a/Jabuuti_(magaalo).mw
+++ b/Jabuuti_(magaalo).mw
@@ -83,22 +83,29 @@
 |footnotes              =
 }}
 [[w:arz:Djibouti]]
-'''Jabuuti''' ({{lang-fr|Djibouti}}; {{lang-ar|جيبوتى}}) waa caasimada ah ee iyo dejinta ugu daawashada ah ee dalka Jamhuuriyadda Jabuuti. Dejinta ayaa waxaa la aasaasay 1888 by Faransiis ah, on dalka ijaaray Soomaali talada iyo Cafar oo kushiray. Intaa waxaa dheer, magaalada ay martigelisey tiro ka mid ah safaaradaha shisheeye, iyo waa xarunta ee ururada caalamiga ah oo badan, hay'adaha aan faa'iido-iyo shirkadaha. 
-Jabuuti waa Jabuuti, sidoo kale waxaa loogu yeeraa Jabuuti, Carabi: مدينة جيبوتي, Faransiiska: Ville de Djibouti, Somaliya: Magaalada Jabuuti, Afar: Magaala Jabuuti) waa magaalo weyn oo magaalo weyn oo Jabuuti ah. Waxay ku taallaa gobolka xeebta Jabuuti ee Gacanka Tadjoura.
-Jabuuti waxay leedahay dad ku dhawaad ​​529,000 oo qof, [1] oo tiradoodu ka badan tahay 70% dadka dalka. Heshiiska waxaa la aasaasay sannadkii 1888 ee Faransiiska, dhulkuna wuxuu ka kireeyay soomaaliya iyo Afar Sultans. Intii lagu jiray muddadii ay jirtay, waxay u adeegtay caasimadda Faransiiska ee Somaliland iyo guusheedii Faransiiska ee Afarsadii iyo Issas.
-Waxaa loo yaqaan 'Pearl of the Gulf of Tadjoura' sababtoo ah halka uu ku yaal, Jabuuti waxaa loo qorsheynayaa meel u dhow maraakiibta maraakiibta ugu dhow ee caalamka, waxayna u shaqeeyaan sidii xarun dib-u-dejin iyo xarun. Dekedda Jabuuti waa dekedda ugu muhiimsan ee dekedda iyo dibadda laga keeno Itoobiya. Intaa waxaa dheer, magaaladu waa xarunta ugu weyn ee ururada caalamiga ah, kuwaas oo ah ururo aan faa'iido doon ahayn [taas oo] iyo shirkadaha. Garoonka Caalamiga ah ee Jabuuti-Ambouli waa madaarka ugu weyn ee gudaha, oo ku xiraya caasimadda meelo kala duwan oo caalami ah. Jabuuti waxay leedahay dhaqaalaha labaad ee ugu weyn ee magaalo kasta oo ku yaal Geeska Afrika ka dib markii Addis Ababa.
+'''Jabuuti''' ({{lang-fr|Djibouti}}; {{lang-ar|جيبوتى}}) waa caasimada ugu weyn waana magaalada ugu weyn dalka Jamhuuriyadda Jabuuti. Waxay ku taalaa Gobolka Jabuuti dhinaca Gacanka Tadjoura.
+
+Magaalada Jabuuti waxaa ku nool dad gaaraya ilaa 562,000, kuwaa oo tirinaya in kabadan 70% tirada guud ee dadka wadanka. Degitaanku waxaa aasaasay Faransiiska sanadkii 1888-kii, dhulkii laga kireystay xukunka Soomaalida iyo Afarta Suldaan. Intii lagu jiray muddadii ka dambaysay, waxay caasimad u ahayd Faransiis Somaliland iyo cidda ku xigta ee Saldhigga Faransiiska ee Afars iyo Issas.
+
+
 == Taariikhda ==
-Laga soo bilaabo 1862 ilaa 1894 oo dalka iyo ilaa xagga woqooyi ee Gacanka Tajuura, waxaa loo bixiyey Obokh. Waxa ayaamahan, maamulada deegaanka Soomaali iyo Cafar oo kushiray leh cidda France saxiixay cahdiyada kala duwan ee u dhexeeya 1883 iyo 1887 si ay marka hore bii ee gobolka. Marka Jarmalku France ee 1940, Jabuuti waxay noqotay Jarmalka oo gacanta ku Faransiis. Iyada oo ka jawaabeysa, Boqortooyada Ingiriiska xiran yihiin dekedda, laakiin ma aha in laga hortago kara degaanka ee Faransiis ka soo bixiya macluumaad ku saabsan ugudambeyn raxanta markabka. Bishii December 1942, oo ku saabsan 4,000 ciidamada British qabsadeen magaalada.
-Laga soo bilaabo 1862 ilaa 1894, dhulkii waqooyiga Gacanka Tadjoura waxaa loo yaqaan "Dhulka". Waxaa xukuma soomaali iyo Afar Sultans, masuuliyiinta maxaliga ah ee Faransiiska saxiixay heshiisyo kala duwan intii u dhaxeysay 1883 iyo 1887 si ay ugu horeyn u helaan meel dhexe oo gobolka ka mid ah [2] [4]
-Masaajidka Al Sacada ee magaalada Jabuuti 1940-kii.
-Faransiiska ayaa markii dambe ka aasaasay Jabuuti 1888-kii, iyada oo aan horay loo xayirin xeebta. 1896-kii, degsiimada waxaa lagu sameeyey caasimadda Faransiiska ee Soomaaliland. [5] Magaaladan dambe ayaa si weyn ugu koray qiyaasta dhismaha tareenka Imperial Ethiopian Imperial. Waqtigaas waxaa jiray dad ka kooban 15,000 oo qof, oo ka badnaa dadweynaha magaalooyinka dhammaan deriska ee Itoobiya marka laga reebo Harar. [7] Inkasta oo shirkadda bilawga ah ay ku fashilantay ayna u baahnayd damaanad dowladeed si looga fogaado in ay hoos u dhacdo maamulka Ingiriiska, [7] Tareenka Franco-Ethiopian ayaa laftiisa guuleystay waxayna u oggolaatay ganacsiga magaalada Jabuuti in uu si dhakhso ah u daboolo ganacsiga hore ee xamuulka ah oo la socday oo u dhow Zeila ee British Somaliland. [8] Jabuuti waxay noqotay xarun laga dhoofiyo koonfurta Itoobiya iyo Ogaden, oo ay ku jirto ganacsiga Harari iyo Qaadka. [6]
-Ciidamadii Faransiiska ahaa ee soo degay 1935.
-Markii Jarmalku ku soo duulay Faransiiska sannadkii 1940, Jabuuti waxay hoos u dhigtay xukunkii Faransiiska ee Vicente Vichy. Jawaabtii, Boqortooyada Ingiriisku way xirtay dekedda, laakiin kama horjoogsan karto Faransiiska maxaliga ah inay bixiso macluumaadka ku saabsan gawaarida maraya. Bishii Disembar 1942, qiyaastii 4,000 oo Ingiriis ah waxay qabsadeen magaalada. Magaalada Jabuuti waxay ku dhawaad ​​22,046 deganayaasha. Dadweynaha Magaalada Jabuuti ayaa si dhaqso ah u kordhay, oo si rasmi ah uga soo kicitimay 17,000 qof 1947-kii ilaa 40,000 bilawgii 1960-kii, 62,000 oo ka mid ah 1967-kii, 118,000 oo ka mid ah 1972-kii ilaa 150,000 horaantii 1980-meeyadii. Ka dibna wuxuu noqday xarunta guud ee Faransiiska guulaysta ee Afarsooyinka iyo Issas.
-Tan iyo markii madax-bannaanidii 1977-kii, magaaladu waxay u adeegtay caasimadda iyo ganacsiga Jamhuuriyadda Jabuuti.
-Jabuuti waa magaalo-dhaqameedyo badan. Waxay leedahay dad ku dhawaad ​​529,000 oo qof oo deggan (Jabuutiyaanka), taas oo ka dhigaysa meel fog oo ka mid ah dejinta dalka. [1] Labada kooxood ee ugu weyn waa Soomaliga iyo Afar, kuwaas oo si caadi ah ugu xiran kooxda Hamitanka Naasiriyadeedka. Muuqaalka magaalo ee magaalada waxaa qaabeeya bulshooyin badan. Jabhadda Jabhadda Jabuuti waxay isbeddeshay 1990-yadii, markii tiro badan oo Itoobiyaan ah iyo muhaajiriin Soomaali ah ay yimaadeen magaalada, iyadoo Jabuuti lagu naanayso "Faransiiska Hong Kong ee Badda Cas"
-Inta badan dadka deegaanka waxay ku hadlaan Af-Soomaali (303,100 oo ku hadla) ama Afar (101,200 oo ku hadla) oo ah luqad kowaad, kuwaas oo ah afafka hooyo ee kooxaha qowmiyadaha Soomaalida iyo Afar. Labada luuqadoodba waxay leeyihiin qooyska Afroasiatic ee waaweyn. Waxaa jira laba luqadood oo rasmi ah oo Jabuuti ah: Carabi (Afroasiatic) iyo Faransiis (Indo-Yurub). [10]
-Carabi waa muhiimada bulshada, dhaqanka iyo diinta. Goobaha rasmiga ah, waxay ka kooban tahay Modern Arabic Carabi. Isku xirka, qiyaastii 40,000 oo deganayaasha maxaliga ahi waxay ku hadlaan luqadda Carabiga Carabta ee Taayiga-Aden, oo sidoo kale loo yaqaan Carabi Jabuuti. Faransiiska waxaa laga dhaxlay xilligii gumeysiga waana luuqadda koowaad ee barashada. Ku dhowaad 14,200 oo Jabuutiyaan ah ayaa ku hadla luqad ahaan. Afafka ajnebiga ah waxaa ka mid ah Omani Carabi (38,900 oo ku hadla), Amxaariga (1,400 oo ku hadla), Giriig (1,000 ku hadla) iyo Hindi (600 ku hadla). [10]
-Dadweynaha Jabuuti waa mid aad u badan Muslim. Islaamku waxa lagu arkay 94% dadweynaha waddanka (qiyaastii 740,000 tan iyo 2012), halka 6% oo ka mid ah dadka degan ay yihiin kuwo raacsan Christian. Jabhadda Jabuuti waxay u adeegtaa dadweynaha Kaniisadaha yar yar, oo ay ku qiyaasayaan tiradooda 7,000 qof sanadkii 2006. [11]
+Waxaa jira cadaymo ku saabsan degitaanka aadanaha ee xeebta bari ee Jabuuti oo ku taariikhaysnayd xilligii naxaas ahaanta.
+
+Laga soo bilaabo 1862 ilaa 1894, dhulka ilaa waqooyiga gacanka Tadjoura waxaa loo yiqiin Obock waxaana xukumayay Soomaalida iyo Afarta Suldaan, maamulada maxalliga ah oo ay Faransiisku kala saxiixdeen heshiisyo kala duwan intii u dhaxeysay 1883 iyo 1887 si marka hore ay gobolka lahaadaan. Isweydaarsiga qoraallada Faransiiska iyo Ingiriiska ee Febraayo 2 iyo 9, 1888 waxay hagaajineysaa xadka dhuleed ee u dhaxeysa gumeystihii labada dal. Waxay si cad uga baxaysaa xukunka Faransiiska xuduudaha koonfureed ee Gacanka Tadjoura, oo ay kujirto jasiirad ka kooban plateaux insubari karin, Ras Djiboutiil. Markaa markaa waa in qodobkaan loo adeegsado u bixitaanka safrayaasha xagga [[Harar]].
+[[File:OlderDjibouticity.jpg|thumb|left|260px|Masjidka Al Sada sanadkii 1940.]]
+Faransiiska ayaa markii dambe asaasay Magaalada Jabuuti sanadkii 1888-kii, oo ah xeeb aan horay u degi jirin. Ambouli waxay ahayd tuulo yar kahor intaysan Faransiisku imaanin waxay qiyaastii 3 Km koonfur kaga beegan tahay magaalada Ras Jabuutiil, Ambouli waxaa loo aqoonsan yahay magaalada 'Canbala' ah O.G.S. Crawford. Canbala wuxuu ka muuqdaa khariidadda Muhammad al-Idrisi ee 1192 xeebta [[Geeska Afrika]], koonfur-bari ee dariiqyada Bab-el-Mandeb, iyo Cambaleh, oo ah magaalo ay ku safrayaan socdaalka Venetian Bragadino, oo ah qarnigii 13-aad ee Yurub u soo booqda [[Itoobiya]], deggenaa siddeed sano.
+
+Sanadkii 1896, dejinta waxaa laga dhigay caasimada Faransiiska Somaliland
+Ujeedada ugu weyn ee danta Faransiiska waxay ahayd gudaha laga ilaaliyo wadada ganacsiga Madagascar iyo Indochina ee Ingiriiska iyo Talyaaniga. Magaalada ayaa markii dambe si weyn u kordhay kadib markii la dhisay Dhismaha Wadada Tareenka ee Imaaraatka. Si dhakhso ah ayey u kortay, iyada oo ka soo bilaabmaysa 1,200 oo qof oo deggan 1893 ilaa 5,561 sanadkii 1906. Intaa waxaa sii dheer, aagga hodanka ah ee koonfurta ee Ambouli wuu sii kordhayay sababtuna tahay dhul beereedyo fara badan oo timir iyo geedo leh. Dekadda Jabuuti waxay noqotay meel kaydka u ah Maraakiibta Badda ee marinnada u dhaxaysa France, Madagascar iyo Indochina bishii Nofeembar 1895.
+
+Waqtigaas waxaa lahaa dad deggan 15,000 oo qof, oo aad uga badan tirada dadka ku nool dhammaan magaalooyinka deriska la ah [[Itoobiya]] marka laga reebo [[Harar]]. In kasta oo shirkaddii ugu horreysay ay ku guul darreysatay oo u baahatay siidayn dowladda si looga fogaado inay ku hoos dhacdo maamulkii Ingiriiska, Waddada Tareenka ee Faransiis-Itoobiyaan lafteeda waxay ahayd guul waxayna u oggolaatay ganacsiga magaalada Jabuuti inuu si dhakhso ah u baabi'iyo ganacsigii hore ee salka kulahaa ee laga sii watay agagaarka Zeila ee ku dhow British Somaliland. Jabuuti waxay noqotay xarunta laga dhoofiyo koonfurta Itoobiya iyo [[Soomaali Galbeed|Ogaadeenya]], oo ay kujirto ganacsiga kafeeka Harari iyo qaadka. Magaalada Jabuuti waxay bilaabatay inay horumariso sidii xarun ganacsi. Sanadkii 1932, Magaalada Jabuuti waxay ahayd magaaladii ugu horreeysay ee korantada ka baxda Faransiiska Somaliland.
+
+Intii lagu jiray Dagaalkii Labaad ee Adduunka, Magaalada Jabuuti waxaa ku dhuftay duqeymo xagga cirka ah oo [[Talyaaniga]] ka dhacay Juun 21, 1940, kaasoo ay ku dhinteen dad badan oo magaalada ku sugnaa. Dabka ka hortagga diyaaraduhu wuxuu ahaa mid daran oo laba diyaaradood oo Talyaani ah ay ku guuldareysteen inay soo noqdaan, laakiin dab iyo qaraxyo ayaa lagu arkay Jabuuti. Habeenkii, dhowr mawjadood oo ka mid ah kuwa wax duqeeya ee Savoia-Marchetti SM.81 ayaa weerartay xarumaha dekedda. Kadib faransiisku wuu dhacay oo gumeystahaasna waxaa xukumayey dowladda taabacsan Axis Vichy (Faransiiska). Waqtigaas, weerarkii Ingiriiska ee ka dhanka ah dadka reer Talyaani wuxuu adkeeyay xannibaadda Faransiiska Somaliland, abaarna waxay ku jirtay. Dadka deegaanka ayaa ku magac-daray xannibaadda carmii, oo ah eray loogu talagalay nooc hadhuudhka had iyo goor loo habeeyo lo'da, laakiin waxaa loo adeegsan jiray cuntada bini-aadamka marka la eego dhererka abaarta. Bishii Disember 1942, qiyaastii 4,000 oo ciidamada Ingiriiska iyo kuwa Faransiiska ee Xorta ah ayaa qabsaday magaalada.
+
+Tirada dadka Magaalada Magaalada Jabuuti ayaa si xawli ah u koraysay, iyadoo si rasmi ah u dhawaad 17,000 degganeyd sanadkii 1947. degsiimooyinka, abaabulidda dhismayaashaas ee ku teedsan barxadaha u furan bartamaha, iyo isu-imaatinka xarumaha dhaqameed si loo sameeyo xarun rayid. Waxay markaa noqotay xaruntii ku guuleysatey Dadka Faransiiska ee Afars iyo Issas.
+
+Markii ay Jabuuti ku dhawaaqday xornimada 27 Juun 1977, tirada dadka Magaalada Jabuuti waxay kor u dhaaftay 110,000, magaaladu waxay u shaqeysay inay tahay caasimada maamulka iyo ganacsiga ee Jamhuuriyadda Jabuuti.
+
 
 [[File:DjiboutiCity-Djibouti.png|190px]]
 [[File:Updated Map Of Djibouti City and Balbala.png|thumb|650px|Districts of Djibouti City and Balbala.]]
