--- a/Jabuuti_(magaalo).mw
+++ b/Jabuuti_(magaalo).mw
@@ -100,6 +100,7 @@ Ujeedada ugu weyn ee danta Faransiiska waxay ahayd gudaha laga ilaaliyo wadada g
 
 Waqtigaas waxaa lahaa dad deggan 15,000 oo qof, oo aad uga badan tirada dadka ku nool dhammaan magaalooyinka deriska la ah [[Itoobiya]] marka laga reebo [[Harar]]. In kasta oo shirkaddii ugu horreysay ay ku guul darreysatay oo u baahatay siidayn dowladda si looga fogaado inay ku hoos dhacdo maamulkii Ingiriiska, Waddada Tareenka ee Faransiis-Itoobiyaan lafteeda waxay ahayd guul waxayna u oggolaatay ganacsiga magaalada Jabuuti inuu si dhakhso ah u baabi'iyo ganacsigii hore ee salka kulahaa ee laga sii watay agagaarka Zeila ee ku dhow British Somaliland. Jabuuti waxay noqotay xarunta laga dhoofiyo koonfurta Itoobiya iyo [[Soomaali Galbeed|Ogaadeenya]], oo ay kujirto ganacsiga kafeeka Harari iyo qaadka. Magaalada Jabuuti waxay bilaabatay inay horumariso sidii xarun ganacsi. Sanadkii 1932, Magaalada Jabuuti waxay ahayd magaaladii ugu horreeysay ee korantada ka baxda Faransiiska Somaliland.
 
+[[File:Djibouti City in the 1970s at Place 27 June.jpg|thumb|right|300px|Plaza 27 Juun 1970-kii.]]
 Intii lagu jiray Dagaalkii Labaad ee Adduunka, Magaalada Jabuuti waxaa ku dhuftay duqeymo xagga cirka ah oo [[Talyaaniga]] ka dhacay Juun 21, 1940, kaasoo ay ku dhinteen dad badan oo magaalada ku sugnaa. Dabka ka hortagga diyaaraduhu wuxuu ahaa mid daran oo laba diyaaradood oo Talyaani ah ay ku guuldareysteen inay soo noqdaan, laakiin dab iyo qaraxyo ayaa lagu arkay Jabuuti. Habeenkii, dhowr mawjadood oo ka mid ah kuwa wax duqeeya ee Savoia-Marchetti SM.81 ayaa weerartay xarumaha dekedda. Kadib faransiisku wuu dhacay oo gumeystahaasna waxaa xukumayey dowladda taabacsan Axis Vichy (Faransiiska). Waqtigaas, weerarkii Ingiriiska ee ka dhanka ah dadka reer Talyaani wuxuu adkeeyay xannibaadda Faransiiska Somaliland, abaarna waxay ku jirtay. Dadka deegaanka ayaa ku magac-daray xannibaadda carmii, oo ah eray loogu talagalay nooc hadhuudhka had iyo goor loo habeeyo lo'da, laakiin waxaa loo adeegsan jiray cuntada bini-aadamka marka la eego dhererka abaarta. Bishii Disember 1942, qiyaastii 4,000 oo ciidamada Ingiriiska iyo kuwa Faransiiska ee Xorta ah ayaa qabsaday magaalada.
 
 Tirada dadka Magaalada Magaalada Jabuuti ayaa si xawli ah u koraysay, iyadoo si rasmi ah u dhawaad 17,000 degganeyd sanadkii 1947. degsiimooyinka, abaabulidda dhismayaashaas ee ku teedsan barxadaha u furan bartamaha, iyo isu-imaatinka xarumaha dhaqameed si loo sameeyo xarun rayid. Waxay markaa noqotay xaruntii ku guuleysatey Dadka Faransiiska ee Afars iyo Issas.
@@ -107,8 +108,9 @@ Tirada dadka Magaalada Magaalada Jabuuti ayaa si xawli ah u koraysay, iyadoo si 
 Markii ay Jabuuti ku dhawaaqday xornimada 27 Juun 1977, tirada dadka Magaalada Jabuuti waxay kor u dhaaftay 110,000, magaaladu waxay u shaqeysay inay tahay caasimada maamulka iyo ganacsiga ee Jamhuuriyadda Jabuuti.
 
 
-[[File:DjiboutiCity-Djibouti.png|190px]]
+
 [[File:Updated Map Of Djibouti City and Balbala.png|thumb|650px|Districts of Djibouti City and Balbala.]]
+
 == Gobolka Jabuuti ==
 Gobolka [[Jabuuti]] waa mid ka mid ah lixda gobol ee [[Jabuuti]]. Waxaa xudduud la leeyahay Gacanka Tajuura u waqooyiga iyo waqooyi bari, iyo gobolka Carta si Koonfureed iyo dhinaca Galbeed. gobolka [[Jabuuti]] waa gobolka ugu yar dalka, laakiin sidoo kale gobolka leh dadweynaha ugu sareeya.
 == Maamulka ==
